# agnix

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md  deny.toml
.github/workflows/: README.md  changelog.yml  ci.yml  claude-code-review.yml  claude.yml  docs-site.yml  fuzz.yml  mcp-release-watch.yml  publish-crates.yml  release.yml  security.yml  spec-drift.yml  test-action.yml
.task/: workflow-status.json
crates/agnix-cli/: Cargo.toml  README.md
crates/agnix-cli/locales/: en.yml  es.yml  zh-CN.yml
crates/agnix-cli/src/: main.rs  sarif.rs  watch.rs
crates/agnix-cli/src/telemetry/: config.rs
crates/agnix-cli/tests/: cli_integration.rs  docs_website_parity.rs  kiro_ci_gate.rs  kiro_fixture_inventory.rs  rule_parity.rs
crates/agnix-core/: Cargo.toml  README.md
crates/agnix-core/benches/: validation.rs
crates/agnix-core/fuzz/fuzz_targets/: fuzz_markdown.rs
crates/agnix-core/locales/: en.yml
crates/agnix-core/src/: authoring.rs  config.rs  diagnostics.rs  eval.rs  file_utils.rs  fixes.rs  fs.rs  lib.rs  pipeline.rs  registry.rs
crates/agnix-core/src/config/: builder.rs  rule_filter.rs  schema.rs  tests.rs
crates/agnix-core/src/file_types/: detection.rs  types.rs
crates/agnix-core/src/parsers/: frontmatter.rs  markdown.rs
crates/agnix-core/src/rules/: agents_md.rs  cline.rs  codex.rs  copilot.rs  cross_platform.rs  kiro_agent.rs  mod.rs  opencode.rs  project_level.rs  roo.rs
crates/agnix-core/src/schemas/: cline.rs  codex.rs  common.rs  copilot_agent.rs  cross_platform.rs  kiro_agent.rs  kiro_hook.rs  kiro_mcp.rs  kiro_power.rs  mod.rs
crates/agnix-core/tests/: api_contract.rs  fix_integration.rs  lib_tests.rs
crates/agnix-lsp/: Cargo.toml  README.md
crates/agnix-lsp/locales/: en.yml
crates/agnix-lsp/src/: backend.rs  lib.rs  testability_tests.rs  vscode_config.rs
crates/agnix-lsp/src/backend/: events.rs  helpers.rs  revalidation.rs  tests.rs
crates/agnix-lsp/tests/: lsp_integration.rs
crates/agnix-mcp/: Cargo.toml
crates/agnix-mcp/src/: main.rs
crates/agnix-mcp/tests/: mcp_tests.rs
crates/agnix-rules/: rules.json
crates/agnix-wasm/src/: lib.rs
editors/jetbrains/: gradle.properties
editors/neovim/: README.md
editors/vscode/: README.md  package-lock.json  package.json
editors/zed/: LICENSE-APACHE  LICENSE-MIT  extension.toml
knowledge-base/: INDEX.md  README.md  VALIDATION-RULES.md  rules.json
locales/: en.yml  es.yml  zh-CN.yml
npm/: README.md  package.json
plugin/.claude-plugin/: plugin.json
plugin/commands/: agnix.md
plugin/skills/agnix/: SKILL.md
scripts/: check-rule-counts.py  generate-docs-rules.py  pre-push-rust  setup-hooks.sh
skills/agnix/: SKILL.md
tests/: cross_crate_integration.rs
tests/fixtures/: README.md
tests/fixtures/cline-invalid/.clinerules/: bad-glob.txt  scalar-paths.txt  unknown-keys.txt
tests/fixtures/cline/.clinerules/: 03-python.txt
tests/fixtures/copilot-invalid/.github/agents/: invalid-infer-null.agent.md  invalid-infer-type.agent.md
tests/fixtures/copilot/.github/agents/: reviewer.agent.md
tests/fixtures/kiro-agents/.kiro/agents/: invalid-hook-event.json  invalid-model.json  invalid-resource.json  minimal-agent.json  mismatched-tools.json  missing-hook-command.json  no-mcp-access.json  unknown-fields.json  valid-agent.json  valid-hooks.json
tests/fixtures/kiro-hooks/.kiro/hooks/: invalid-event.kiro.hook  missing-action.kiro.hook  missing-patterns.kiro.hook  missing-tool-types.kiro.hook  valid-file-save.kiro.hook  valid-pre-tool.kiro.hook  valid-prompt-submit.kiro.hook
tests/fixtures/kiro-mcp/.kiro/settings/: hardcoded-secrets.json  missing-command-url.json  valid-local-mcp.json  valid-remote-mcp.json
tests/fixtures/kiro-powers/bad-mcp/: POWER.md  mcp.json
tests/fixtures/kiro-powers/empty-body/: POWER.md
tests/fixtures/kiro-powers/empty-keywords/: POWER.md
tests/fixtures/kiro-powers/missing-frontmatter/: POWER.md
tests/fixtures/kiro-powers/valid-power/: POWER.md  mcp.json
tests/real-world/: repos.yaml
website/: docusaurus.config.js  package-lock.json  package.json  versions.json
website/docs/: getting-started.md  intro.md
website/docs/rules/: index.md
website/src/css/: custom.css
website/src/css/design-system/: tokens-docusaurus.css
website/src/data/: siteData.json
website/versioned_docs/version-0.12.1/: api-reference.md  configuration.md  contributing.md  installation.md  intro.md
website/versioned_docs/version-0.12.2/: editor-integration.md  getting-started.md
website/versioned_docs/version-0.12.2/rules/: index.md
website/versioned_docs/version-0.15.0/: contributing.md  editor-integration.md  installation.md  troubleshooting.md
website/versioned_docs/version-0.15.0/rules/: index.md
website/versioned_sidebars/: version-0.12.1-sidebars.json
