[package]
name = "agnix-workspace-tests"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]
resolver = "2"
members = [
    "crates/agnix-core",
    "crates/agnix-rules",
    "crates/agnix-cli",
    "crates/agnix-lsp",
    "crates/agnix-mcp",
    "crates/agnix-wasm",
]
exclude = [
    "editors/zed", # Standalone WASM crate, not part of workspace
]

[workspace.package]
version = "0.12.2"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
authors = ["Avi Fenesh <avifenesh@gmail.com>"]
repository = "https://github.com/avifenesh/agnix"
homepage = "https://github.com/avifenesh/agnix"
keywords = ["agent", "linter", "claude", "skills", "mcp"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Internal crates - path for local dev, version for crates.io
agnix-rules = { path = "crates/agnix-rules", version = "0.12.2" }
agnix-core = { path = "crates/agnix-core", version = "0.12.2" }

# Core dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2.0.18"
anyhow = "1"

# Parsing
pulldown-cmark = "0.13.0"
regex = "1"

# File handling
walkdir = "2"
ignore = "0.4"
glob = "0.3"

# Parallelism
rayon = "1.10"

# Lock-free concurrency
arc-swap = "1"

# UUID generation (security fix: CSPRNG)
uuid = { version = "1", features = ["v4"] }

# CLI
clap = { version = "4", features = ["derive", "cargo"] }
colored = "3.1.1"

# Async runtime (for LSP later)
tokio = { version = "1.49.0", features = ["full"] }

# LSP
tower-lsp = "0.20"

# i18n
rust-i18n = "3.1"
sys-locale = "0.3"

[dev-dependencies]
agnix-core = { path = "crates/agnix-core", features = ["__internal_unchecked", "__internal"] }
agnix-rules = { path = "crates/agnix-rules" }
serde_json = "1"
tempfile = "3"
toml = "0.8"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
