[package]
name = "agnix-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for agnix - agent config linter"
readme = "README.md"
keywords = ["agent", "linter", "cli", "claude", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "agnix"
path = "src/main.rs"

[features]
default = []
# Enable telemetry HTTP submission (opt-in at compile time too)
telemetry = ["dep:reqwest"]

[dependencies]
agnix-core.workspace = true
agnix-rules.workspace = true
clap.workspace = true
colored.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "1.0"
similar = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = { version = "8", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.7"
ctrlc = "3"
dirs = "5"
rust-i18n = { workspace = true }
sys-locale = { workspace = true }

# Optional: HTTP client for telemetry submission
reqwest = { version = "0.13", features = ["blocking", "json"], optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
regex = "1"
