[package]
name = "agnix-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core validation engine for agent configurations"
readme = "README.md"
keywords = ["agent", "linter", "validation", "mcp", "skills"]
categories = ["development-tools", "parser-implementations"]

[features]
default = ["filesystem"]
filesystem = ["dep:rayon", "dep:ignore", "dep:dirs"]

[dependencies]
agnix-rules.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
pulldown-cmark.workspace = true
regex.workspace = true
ignore = { workspace = true, optional = true }
glob.workspace = true
rayon = { workspace = true, optional = true }
dirs = { version = "5", optional = true }
semver = "1"
toml = "1.0"
schemars = "1"
rust-i18n = { workspace = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
iai-callgrind = "0.16"
tracking-allocator = "0.4"

[[bench]]
name = "validation"
harness = false

[[bench]]
name = "iai_validation"
harness = false
