[package]
name = "agnix-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Language Server Protocol implementation for agnix"

[[bin]]
name = "agnix-lsp"
path = "src/main.rs"

[dependencies]
agnix-core.workspace = true
arc-swap = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-i18n = { workspace = true }
sys-locale = { workspace = true }

[dev-dependencies]
tempfile = "3"
